Position et dimension des fenêtres après leur fermeture fonctionne.

--- a/App.config
+++ b/App.config
@@ -29,6 +29,15 @@
             <setting name="colorLigneSecondaire" serializeAs="String">
                 <value>LightGray</value>
             </setting>
+            <setting name="positionWeekView" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="positionEvents" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="tailleWeekView" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
         </Compact_Agenda.Properties.Settings>
         <DB_Demo.Properties.Settings>
             <setting name="BackColorFormLocation" serializeAs="String">
